[fixes #27771685] Fixed amount break on reporter dashboard

--- a/app/stylesheets/partials/_admin.sass
+++ b/app/stylesheets/partials/_admin.sass
@@ -313,7 +313,7 @@ body.app #content .tabs
       +transition(all, 0.5s)
   .currency
     display: inline
-    font-size: 20px
+    font-size: 12px
     color: #BBB
   .half
     margin-bottom: 0
